# SDLTest

./: .gitignore  CMakeLists.txt
sources/: main.c
